# MIND-FLOW

./: .gitignore  README.md  citates.txt
2022-09-16/: basic concepts.txt
2022-09-18/: first_attempt_relations.hs  rels.hs  rels2.hs  rels3.hs  typeclasses.txt
2022-09-28/: btc_sign.txt  jwt.txt  oaurth_openid.txt  sql joins.txt
2022-10-02/: lca.hs
2022-10-03/: WAI.txt  overloads.hs
2022-10-04/: sql_with_haskell.txt
2022-10-05/args/: CHANGELOG.md  args.cabal
2022-10-05/args/app/: Main.hs
2022-10-05/hlist/: hlist.hs
2022-10-05/mysql-simple-start/: CHANGELOG.md  cabal.project.freeze  mypr.cabal
2022-10-05/mysql-simple-start/app/: Main.hs
2022-10-05/wai-warp-start/: CHANGELOG.md  msrv.cabal
2022-10-05/wai-warp-start/app/: Main.hs
2022-10-05/websocket-start/: CHANGELOG.md  wsp.cabal
2022-10-05/websocket-start/app/: BaseT.hs  BaseTJson.hs  Core.hs  Main.hs  Users.hs  UsersJson.hs  misc.hs
2022-10-19/: ssum.hs
2022-10-27/: rev.py
2022-11-13/: prefix_fun.hs
2022-11-15/: fibs.hs
2022-11-16/: hgcd.hs  hr.hs
2022-11-17/: pn.hs
2022-11-21/: tmanager.hs
2022-11-29/: cvh.hs  rmq.hs
2022-12-23/: rmq.hs
2022-12-26/: mr.hs
2022-12-26/matrixrot/: matrixrot.cabal
2022-12-26/matrixrot/app/: Main.hs
2023-10-02/hot/: CHANGELOG.md.save0  hot.cabal.save0
2023-10-02/hot/app/: Main.hs
26.12.2022/: cw.hs
26.12.2022/matrixrot/: CHANGELOG.md  cabal.project.save  matrixrot.cabal
26.12.2022/matrixrot/app/: Main.hs
